--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SK Library - Bhawanipatna</title>
+    <title>Your Library - Bhawanipatna</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -68,8 +68,7 @@
         <div class="container">
             <h2>Admissions Open</h2>
             <p>Join our library today! Admission fee is <strong>₹500</strong>, and the monthly fee is
-                <strong>₹1000</strong>.
-            </p>
+                <strong>₹1000</strong>.</p>
             <p><strong>Early Bird Discount:</strong> Enroll for 6 months and avail special discounts.</p>
             <a href="#contact" class="btn-primary">Apply Now</a>
         </div>
@@ -88,7 +87,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 SK Library, Bhawanipatna. All rights reserved.</p>
+            <p>&copy; 2024 Your Library, Bhawanipatna. All rights reserved.</p>
         </div>
     </footer>
 
