--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
     <!-- Navigation Bar -->
@@ -22,7 +24,7 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Hero Section with Background Image -->
     <section class="hero">
         <div class="container">
             <h2>Welcome to Your Library</h2>
@@ -35,7 +37,8 @@
     <section id="about" class="section">
         <div class="container">
             <h2>About Our Library</h2>
-            <p>Your Library is a serene space for students to focus on their studies with all necessary amenities like WIFI, RO Water, and a wide range of newspapers.</p>
+            <p>Your Library is a serene space for students to focus on their studies with all necessary amenities like
+                WIFI, RO Water, and a wide range of newspapers.</p>
         </div>
     </section>
 
@@ -64,7 +67,8 @@
     <section id="admissions" class="section">
         <div class="container">
             <h2>Admissions Open</h2>
-            <p>Join our library today! Admission fee is <strong>₹500</strong>, and the monthly fee is <strong>₹1000</strong>.</p>
+            <p>Join our library today! Admission fee is <strong>₹500</strong>, and the monthly fee is
+                <strong>₹1000</strong>.</p>
             <p><strong>Early Bird Discount:</strong> Enroll for 6 months and avail special discounts.</p>
             <a href="#contact" class="btn-primary">Apply Now</a>
         </div>
@@ -88,4 +92,5 @@
     </footer>
 
 </body>
+
 </html>
