--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Library - Bhawanipatna</title>
+    <title>SK Library - Bhawanipatna</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,7 +14,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="container">
-            <h1 class="logo">Your Library</h1>
+            <h1 class="logo">SK Library</h1>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#facilities">Facilities</a></li>
@@ -27,7 +27,7 @@
     <!-- Hero Section with Background Image -->
     <section class="hero">
         <div class="container">
-            <h2>Welcome to Your Library</h2>
+            <h2>Welcome to SK Library</h2>
             <p>Your gateway to knowledge and learning, located in Irrigation Colony, Bhawanipatna, Odisha.</p>
             <a href="#about" class="btn-primary">Learn More</a>
         </div>
@@ -37,7 +37,7 @@
     <section id="about" class="section">
         <div class="container">
             <h2>About Our Library</h2>
-            <p>Your Library is a serene space for students to focus on their studies with all necessary amenities like
+            <p>SK Library is a serene space for students to focus on their studies with all necessary amenities like
                 WIFI, RO Water, and a wide range of newspapers.</p>
         </div>
     </section>
@@ -47,17 +47,43 @@
         <div class="container">
             <h2>Our Facilities</h2>
             <div class="facility-list">
-                <div class="facility-item">
-                    <h3>Free WIFI</h3>
-                    <p>High-speed internet access for all students.</p>
-                </div>
+
                 <div class="facility-item">
                     <h3>RO Water</h3>
                     <p>Clean and safe drinking water is available at all times.</p>
                 </div>
+
                 <div class="facility-item">
-                    <h3>Newspapers</h3>
-                    <p>Stay updated with the latest news from our daily collection of newspapers.</p>
+                    <h3>Quiet Place to Study</h3>
+                    <p>A peaceful environment for focused study sessions.</p>
+                </div>
+                <div class="facility-item">
+                    <h3>Well-equipped Discussion Room and Dining Hall</h3>
+                    <p>A designated space for group discussions and meals.</p>
+                </div>
+                <div class="facility-item">
+                    <h3>24/7 CCTV Surveillance</h3>
+                    <p>Your safety is our priority with round-the-clock surveillance.</p>
+                </div>
+                <div class="facility-item">
+                    <h3>Fully WIFI-Enabled</h3>
+                    <p>Stay connected across the library with uninterrupted Wi-Fi coverage.</p>
+                </div>
+                <div class="facility-item">
+                    <h3>Free Papers, Magazines, and Reference Books</h3>
+                    <p>Access a wide variety of reading materials and reference books.</p>
+                </div>
+                <div class="facility-item">
+                    <h3>Fully Air-Conditioned Area</h3>
+                    <p>Comfortable, temperature-controlled environment.</p>
+                </div>
+                <div class="facility-item">
+                    <h3>Individual Cabins with Charging Points</h3>
+                    <p>Private cabins equipped with charging points and comfortable chairs.</p>
+                </div>
+                <div class="facility-item">
+                    <h3>Zero Holidays</h3>
+                    <p>We are open every day, including holidays, for uninterrupted learning.</p>
                 </div>
             </div>
         </div>
@@ -80,14 +106,14 @@
             <h2>Contact Us</h2>
             <p>Location: Irrigation Colony, Bhawanipatna, Odisha, India</p>
             <p>Email: <a href="mailto:kiransashanka@gmail.com">kiransashanka@gmail.com</a></p>
-            <p>Phone: +91-1234567890</p>
+            <p>Phone: +91-7327098887</p>
         </div>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Your Library, Bhawanipatna. All rights reserved.</p>
+            <p>&copy; 2024 SK Library, Bhawanipatna. All rights reserved.</p>
         </div>
     </footer>
 
