More content updated

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <section class="hero">
         <div class="container">
             <h2>Welcome to SK Library</h2>
-            <p>Your gateway to knowledge and learning, located in Irrigation Colony, Bhawanipatna, Odisha.</p>
+            <p>Your gateway to knowledge and learning, located in Irrigation Colony, Bhawanipatna, Odisha. Discover a
+                world of resources and a peaceful environment designed to support your academic and personal growth.</p>
             <a href="#about" class="btn-primary">Learn More</a>
         </div>
     </section>
@@ -37,8 +38,12 @@
     <section id="about" class="section">
         <div class="container">
             <h2>About Our Library</h2>
-            <p>SK Library is a serene space for students to focus on their studies with all necessary amenities like
-                WIFI, RO Water, and a wide range of newspapers.</p>
+            <p>SK Library is more than just a place to study. It is a community hub where students and knowledge
+                enthusiasts come together. We provide a serene space equipped with modern amenities to enhance your
+                learning experience. Our collection includes a wide range of books, journals, and digital resources
+                tailored to meet the needs of every learner.</p>
+            <p>Whether you're preparing for exams, conducting research, or simply enjoying a good book, SK Library
+                offers a welcoming environment to help you succeed.</p>
         </div>
     </section>
 
@@ -47,43 +52,58 @@
         <div class="container">
             <h2>Our Facilities</h2>
             <div class="facility-list">
-
                 <div class="facility-item">
                     <h3>RO Water</h3>
-                    <p>Clean and safe drinking water is available at all times.</p>
+                    <p>Clean and safe drinking water is available at all times. We prioritize your health and ensure the
+                        highest quality of water through our advanced RO filtration system.</p>
                 </div>
 
                 <div class="facility-item">
                     <h3>Quiet Place to Study</h3>
-                    <p>A peaceful environment for focused study sessions.</p>
+                    <p>A peaceful environment designed to support focused study sessions. Our library is equipped with
+                        comfortable seating and adequate lighting to create an ideal study atmosphere.</p>
                 </div>
+
                 <div class="facility-item">
                     <h3>Well-equipped Discussion Room and Dining Hall</h3>
-                    <p>A designated space for group discussions and meals.</p>
+                    <p>Our discussion rooms are perfect for group study sessions and collaborative work. The dining hall
+                        offers a space to relax and enjoy your meals between study breaks.</p>
                 </div>
+
                 <div class="facility-item">
                     <h3>24/7 CCTV Surveillance</h3>
-                    <p>Your safety is our priority with round-the-clock surveillance.</p>
+                    <p>Your safety is our top priority. We have comprehensive CCTV surveillance to ensure a secure
+                        environment for all our visitors.</p>
                 </div>
+
                 <div class="facility-item">
                     <h3>Fully WIFI-Enabled</h3>
-                    <p>Stay connected across the library with uninterrupted Wi-Fi coverage.</p>
+                    <p>Stay connected with high-speed Wi-Fi available throughout the library. Whether you're researching
+                        online or working on projects, our Wi-Fi ensures you remain connected.</p>
                 </div>
+
                 <div class="facility-item">
                     <h3>Free Papers, Magazines, and Reference Books</h3>
-                    <p>Access a wide variety of reading materials and reference books.</p>
+                    <p>Access a diverse range of reading materials including newspapers, magazines, and reference books.
+                        Our collection is continuously updated to provide you with current and relevant information.</p>
                 </div>
+
                 <div class="facility-item">
                     <h3>Fully Air-Conditioned Area</h3>
-                    <p>Comfortable, temperature-controlled environment.</p>
+                    <p>Enjoy a comfortable environment with our fully air-conditioned library space, designed to keep
+                        you cool and focused even during hot weather.</p>
                 </div>
+
                 <div class="facility-item">
                     <h3>Individual Cabins with Charging Points</h3>
-                    <p>Private cabins equipped with charging points and comfortable chairs.</p>
+                    <p>Our individual study cabins come equipped with charging points and comfortable seating, providing
+                        a private space for uninterrupted work and study.</p>
                 </div>
+
                 <div class="facility-item">
                     <h3>Zero Holidays</h3>
-                    <p>We are open every day, including holidays, for uninterrupted learning.</p>
+                    <p>We are open every day of the year, including holidays, so you can always find a quiet spot to
+                        study whenever you need it.</p>
                 </div>
             </div>
         </div>
@@ -93,9 +113,15 @@
     <section id="admissions" class="section">
         <div class="container">
             <h2>Admissions Open</h2>
-            <p>Join our library today! Admission fee is <strong>₹500</strong>, and the monthly fee is
-                <strong>₹1000</strong>.</p>
-            <p><strong>Early Bird Discount:</strong> Enroll for 6 months and avail special discounts.</p>
+            <p>Join our library community today! We offer a comprehensive membership plan to suit your needs:</p>
+            <ul>
+                <li><strong>Admission Fee:</strong> ₹500</li>
+                <li><strong>Monthly Fee:</strong> ₹1000</li>
+                <li><strong>Early Bird Discount:</strong> Enroll for 6 months and enjoy special discounts on the monthly
+                    fee.</li>
+            </ul>
+            <p>Our membership provides you with unlimited access to all facilities and resources. Sign up now to take
+                advantage of our excellent amenities and services.</p>
             <a href="#contact" class="btn-primary">Apply Now</a>
         </div>
     </section>
@@ -104,9 +130,13 @@
     <section id="contact" class="section section-dark">
         <div class="container">
             <h2>Contact Us</h2>
-            <p>Location: Irrigation Colony, Bhawanipatna, Odisha, India</p>
-            <p>Email: <a href="mailto:kiransashanka@gmail.com">kiransashanka@gmail.com</a></p>
-            <p>Phone: +91-7327098887</p>
+            <p>We would love to hear from you! Whether you have questions about our services, facilities, or admissions,
+                feel free to reach out to us:</p>
+            <p><strong>Location:</strong> Irrigation Colony, Bhawanipatna, Odisha, India</p>
+            <p><strong>Email:</strong> <a href="mailto:kiransashanka@gmail.com">kiransashanka@gmail.com</a></p>
+            <p><strong>Phone:</strong> +91-7327098887</p>
+            <p>Our team is available to assist you and provide any information you need. We look forward to your visit!
+            </p>
         </div>
     </section>
 
